Fixed coplanarity problems in IBIS style. Created copy of IBIS as a starting point for the DistanceFields style.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ SET( ${ProjectName}_Styles_Classes
     RenderStyle
     DepthPeeling
     IBIS
+    DistanceFields
 )
 
 # Widgets has its own sources.cmake (for moc / uic)
