Enabled custom viewports in the Renderer. Added cross-eyed stereo renderer :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ SET( ${ProjectName}_Rendering_Classes
     ImageDataTexture3D
     Camera
     Renderer
+    CrossEyedStereoRenderer
 ) 
 
 SET( ${ProjectName}_Styles_Classes
