Refactored Camera into a basic camera and a camera orbiting its focus. OrbitCamera is now used for the interactive camera, while a normal Camera with offset position is used for shadow map rendering. Enabled lighting controls to control offset. Still need to change the normal light based on these.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ SET( ${ProjectName}_Rendering_Classes
     PolyData
     ImageDataTexture3D
     Camera
+    OrbitCamera
     Renderer
     CrossEyedStereoRenderer
     ShadowMappingRenderer
