Added OverlayRenderer, a generic renderer for overlaying the images from two other renderers. Added experimental brushing support to main view.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ SET( ${ProjectName}_Rendering_Classes
     SimpleRenderer
     LayeredRenderer
     BrushingRenderer
+    OverlayRenderer
     CrossEyedStereoRenderer
     ShadowMappingRenderer
 )
