Extracted DistanceFields shaders. Fixed small bug introduced in r3726 which caused DepthPeeling to lose its colors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,9 @@ SET( ${ProjectName}_Shaders_Text
 	IBISScribeVS.txt
 	IBISScribeFS.txt
 	IBISPainterFS.txt
+	DistanceFieldsScribeVS.txt
+	DistanceFieldsScribeFS.txt
+	DistanceFieldsPainterFS.txt
 )
 
 # --------------------------------------------------
