Extracted common functions from the shaders into separate "libraries".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,8 @@ SET( ${ProjectName}_TextHeaders
 )
 
 SET( ${ProjectName}_Shaders_Text
+	LibUtility.txt
+	LibCSG.txt
 	GenericPainterVS.txt
 	DepthPeelingScribeFS.txt
 	DepthPeelingPainterFS.txt
