Extracted ShadowMap shaders for now. These should be merged with the styles later (use a #define to convert a style into its shadowmap).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,9 @@ SET( ${ProjectName}_Shaders_Text
 	DistanceFieldsScribeVS.txt
 	DistanceFieldsScribeFS.txt
 	DistanceFieldsPainterFS.txt
+	ShadowMapScribeVS.txt
+	ShadowMapScribeFS.txt
+	ShadowMapPainterFS.txt
 )
 
 # --------------------------------------------------
