Added ParamSets to deal with sets of per-renderable or per-style uniforms. Started converting existing code to use these.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,10 @@ SET( ${ProjectName}_Rendering_Classes
 	OverlayRenderer
 	CrossEyedStereoRenderer
 	ShadowMappingRenderer
+	ParamSet
+	LayeredRendererParamSet
+	DistanceFieldParamSet
+	PCAParamSet
 )
 
 SET( ${ProjectName}_Styles_Classes
