Added AttributeSet wrapper for VBO + pointer combination. Refactored PolyData and VBOMesh to use this new class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ SET( ${ProjectName}_Math_Classes
 SET( ${ProjectName}_Rendering_Classes
 	Renderable
 	AttributePointers
+	AttributeSet
 	VBOMesh
 	PolyData
 	PointCloud
