Replaced simple views and data loading with RenderableControlWidgets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ SET( VTK_lib
 # We need Qt
 FIND_PACKAGE( Qt4 REQUIRED )
 SET( QT_USE_QTMAIN TRUE )
+SET( QT_USE_QTNETWORK TRUE )
 SET( QT_USE_QTOPENGL TRUE )
 INCLUDE( ${QT_USE_FILE} )
 # Required Qt modules
