Added PCACorrespondenceParamSet for the PCAPointCorrespondenceGlyphs weights.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ SET( ${ProjectName}_Rendering_Classes
 	ParamSet
 	DistanceFieldParamSet
 	PCAParamSet
+	PCACorrespondenceParamSet
 	TransferFunctionParamSet
 )
 
