Forgot CMakeLists.txt in the last commit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ SET( ${ProjectName}_Rendering_Classes
 	LayeredRaycastingRenderer
 	PointFilteringRenderer
 	BrushingRenderer
+	NestedRenderer
 	OverlayRenderer
 	CrossEyedStereoRenderer
 	ShadowMappingRenderer
