Renamed DistanceFieldParamSet to VolumeParamSet and updated all references in the code that really apply to volumes, not (just) distance fields.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ SET( ${ProjectName}_Renderables_Classes
 
 SET( ${ProjectName}_ParamSets_Classes
 	ParamSet
-	DistanceFieldParamSet
+	VolumeParamSet
 	PCAParamSet
 	PCACorrespondenceParamSet
 	TransferFunctionParamSet
