Added FilteredVolumeParamSet for easily applying filters to volumes in a VolumeParamSet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,7 @@ SET( ${ProjectName}_Renderables_Classes
 SET( ${ProjectName}_ParamSets_Classes
 	ParamSet
 	VolumeParamSet
+	FilteredVolumeParamSet
 	PCAParamSet
 	PCACorrespondenceParamSet
 	TransferFunctionParamSet
