Starting work on a SliceRenderer for visualizing single slices or cuts of the volume(s).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ SET( ${ProjectName}_Rendering_Classes
 	# Renderers
 	Renderer
 	SimpleRenderer
+	SliceRenderer
 	LayeredRenderer
 	LayeredRaycastingRenderer
 	PointFilteringRenderer
