Refactoring again. View is now a separate concept from Scene. A View is owned by the Renderer and provides visibility management and a reduced interface to the (shared) Scene.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ SET( ${ProjectName}_Math_Classes
 SET( ${ProjectName}_Rendering_Classes
 	# Scene and views
 	Scene
+	View
 	SelectionView
 
 	# Cameras
