Renamed TransferFunctionParamSet to DualThresholdParamSet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,7 @@ SET( ${ProjectName}_ParamSets_Classes
 	FilteredVolumeParamSet
 	PCAParamSet
 	PCACorrespondenceParamSet
-	TransferFunctionParamSet
+	DualThresholdParamSet
 )
 
 SET( ${ProjectName}_Styles_Classes
