Started to implement a CustomLayeredRaycaster which gets its shaders from strings (for experimenting without recompiling).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ SET( ${ProjectName}_Styles_Classes
 	Raycaster
 	DeformationRaycaster
 	LayeredRaycaster
+	CustomLayeredRaycaster
 )
 
 SET( ${ProjectName}_Interactors_Classes
