--- a/NQVTKConfig.cmake.in
+++ b/NQVTKConfig.cmake.in
@@ -11,5 +11,8 @@ SET(NQVTK_INCLUDE_DIRS "@NQVTK_INCLUDE_DIRS_CONFIG@")
 # The library directories.
 SET(NQVTK_LIBRARY_DIRS "@NQVTK_LIBRARY_DIRS_CONFIG@")
 
+# The NQVTK library and dependencies
+SET(NQVTK_LIBRARIES "@NQVTK_LIBRARIES_CONFIG@")
+
 # The location of the UseNQVTK.cmake file.
 SET(NQVTK_USE_FILE "@NQVTK_USE_FILE@")
